<resources>
    <string name="app_name">SendMeal</string>
    <string name="text_tipo_tarjeta">Tipo de tarjeta:</string>
    <string name="text_debito">Débito</string>
    <string name="text_credito">Crédito</string>
    <string name="text_fecha_vencimiento">Fecha de vencimiento:</string>
    <string name="text_carga_inicial">Realizar carga inicial?</string>
    <string name="text_credito_inicial">Credito inicial:</string>
    <string name="text_acepto_term">Acepto los terminos y condiciones</string>
    <string name="text_btn_registrar">REGISTRAR</string>
    <string name="hint_repetir_contra">Repetir contraseña</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_nro_tarjeta">Número de tarjeta</string>
    <string name="hint_ccv">CCV</string>
    <string name="hint_mes">Mes</string>
    <string name="hint_anio">Año</string>
    <string name="hint_cbu">CBU</string>
    <string name="hint_alias_cbu">Alias CBU</string>
    <string name="exito">El registro fue exitoso!</string>
    <string name="registrarme">Registrarme</string>
    <string name="crear_item">crear item</string>
    <string name="lista_de_items">lista de items</string>
    <string name="nuevo_plato">Nuevo Plato</string>
    <string name="hint_titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="agregarPlatos">AGREGAR PLATOS</string>
    <string name="direccionPedido">Dirección</string>
    <string name="tipoEnvio1">Envío a domicilio</string>
    <string name="tipoEnvio2">TakeAway</string>
    <string name="confirmar">CONFIRMAR PEDIDO</string>
    <string name="agregarUbi">Agregar Ubicación</string>
    <string name="agregarFotoCamara">Agregar Foto desde camara</string>
    <string name="agregarFotoGaleria">Agregar Foto desde Galeria</string>
    <string name="channel_name">Canal send meal</string>
    <string name="channel_description">Pedido confirmado - canal</string>
    <string name="google_maps_key">AIzaSyBOR-4ZmV4-wrUlUW47axC7f3DYR-L7xpo</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>