<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <Button
        android:id="@+id/agregarPlato_btn"
        android:layout_width="312dp"
        android:layout_height="101dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/agregarPlatos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregarPlato_btn" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="286dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion_pedido">

        <RadioButton
            android:id="@+id/envio_domicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoEnvio1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/take_away"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoEnvio2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mail_pedido"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@+id/recycler_pedido"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/direccion_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/direccionPedido"
        app:layout_constraintTop_toBottomOf="@+id/mail_pedido"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/confirmarPedido_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <TextView
        android:id="@+id/total"
        android:layout_width="82dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:text="0.0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/recycler_pedido"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/recycler_pedido" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="26dp"
        android:layout_marginBottom="4dp"
        android:text="TOTAL"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/mail_pedido"
        app:layout_constraintEnd_toEndOf="@+id/mail_pedido"
        app:layout_constraintStart_toStartOf="@+id/mail_pedido"
        app:layout_constraintTop_toBottomOf="@+id/recycler_pedido" />

</androidx.constraintlayout.widget.ConstraintLayout>