<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrincipalAzulOscuro"
    tools:context=".CrearItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <TextView
        android:id="@+id/nuevo_plato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_plato"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/blanco"/>

    <EditText
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="textPersonName"
        android:textColor="@color/blanco"
        android:textColorHint="@color/color_hint"
        android:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/descripcion_CT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blanco"/>

    <EditText
        android:id="@+id/descripcion_crear"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blanco"
        android:textColorHint="@color/color_hint"
        android:backgroundTint="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/precio_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Precio"
            android:inputType="numberDecimal"
            android:textColor="@color/blanco"
            android:textColorHint="@color/color_hint"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/calorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Calorias"
            android:inputType="number"
            android:textColor="@color/blanco"
            android:textColorHint="@color/color_hint"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/galeria"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/agregarFotoGaleria"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/camara"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:background="@drawable/boton_redondo"
            android:text="@string/agregarFotoCamara"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="guardar"
        android:background="@drawable/boton_redondo"
        android:textColor="@color/blanco"
        android:layout_marginTop="20dp"/>


</LinearLayout>